--- a/htdocs/css/kmom01.css
+++ b/htdocs/css/kmom01.css
@@ -14,3 +14,68 @@
 .rm-navbar-max {
     display: none;
 }
+
+.site-logo {
+    display: none;
+}
+
+html {
+    background-color: gainsboro;
+    
+}
+
+.wrap-all {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.rm-navbar li {
+    float: left;
+    list-style-type: none;
+    padding: 2.0em;
+    border: 1px solid #999;
+    color: black;
+}
+
+.rm-navbar a {
+    color: black;
+    text-decoration: none;
+}
+
+
+
+.region-flash {
+    clear:both;
+}
+
+.outer-wrap-footer {
+    background-color: rgb(255,228,225);    
+}
+
+.footer-column {
+    width: 33%;
+    float: left;
+}
+
+
+.outer-wrap-header, 
+.outer-wrap-flash
+{
+    background-color: gainsboro;
+}
+
+.byline {
+    border: outset;
+    overflow: auto;
+    background-color: rgb(255,245,238);
+    clear: both;
+    border-color: grey;
+}
+
+.byline img {
+    width: 150px;
+    float: left;
+    padding-top: 0;
+    padding-right: 10px;
+    padding-bottom: 15px;
+}
